fix: fix sidebar height on mobile

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -1068,6 +1068,7 @@ html, body {
 
     &.open {
       left: 0;
+      top: 70px;
     }
   }
 
